
libmpio_includedir = $(includedir)/mp

libmpio_include_HEADERS = \
		endian.h \
		exception.h \
		functional.h \
		iocntl.h \
		memory.h \
		object_callback.h \
		object_delete.h \
		pthread.h \
		shared_buffer.h \
		signal.h \
		sparse_array.h \
		stream_buffer.h \
		sync.h \
		tls_set.h \
		unordered.h \
		unordered_map.h \
		unordered_set.h \
		utilize.h \
		wavy.h

PREP_SOURCE = \
		object_callback.hmpl \
		sparse_array.hmpl \
		sync.hmpl \
		wavy.hmpl

EXTRA_DIST = $(PREP_SOURCE)

